fix overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,9 +15,13 @@
 /*
   3. Allow percentage-based heights in the application
 */
+
+html {
+  overflow-x: hidden;
+}
 html,
 body {
-  /* height: 100%; */
+  height: 100%;
 }
 /*
   Typographic tweaks!
